# dwm-cli

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/digital_watermarking_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/digital_watermarking_cli/cli/: helpers.py  main.py
src/digital_watermarking_cli/cli/menus/: config_menu.py  main_menu.py
src/digital_watermarking_cli/cli/prompts/: file_prompts.py  watermark_prompts.py
src/digital_watermarking_cli/config/: settings.py
src/digital_watermarking_cli/core/: visible.py  visible_watermark.py
src/digital_watermarking_cli/dialogs/: file_dialog.py
src/digital_watermarking_cli/ui/: console.py
src/digital_watermarking_cli/utils/: image_helpers.py
src/dwm_cli/assets/: banner.txt
src/dwm_cli/cli/: helpers.py  main.py
src/dwm_cli/cli/menus/: config_menu.py  help_menu.py  main_menu.py
src/dwm_cli/cli/prompts/: file_prompts.py  hybrid_prompts.py  lsb_prompts.py  watermark_prompts.py
src/dwm_cli/config/: settings.py
src/dwm_cli/core/: hybrid_watermark.py  lsb_watermark.py  visible_watermark.py
src/dwm_cli/dialogs/: file_dialog.py
src/dwm_cli/ui/: console.py  menu_utils.py
src/dwm_cli/utils/: image_helpers.py
tests/: test_hybrid_watermark.py  test_lsb_watermark.py  test_visible_watermark.py
