[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
description = "Digital Watermarking CLI tool"
name = "dwm-cli"
version = "0.1.0"

requires-python = ">=3.9"

dependencies = ["typer>=0.9.0", "Pillow>=9.0.0", "readchar>=4.0"]

[project.scripts]
dwm-cli = "dwm_cli.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dwm_cli = ["assets/fonts/*.ttf", "assets/banner.txt"]

# -----------------------
# Black
# -----------------------
[tool.black]
line-length = 88
target-version = ["py39"]

# -----------------------
# Ruff
# -----------------------
[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

# -----------------------
# MyPy
# -----------------------
[tool.mypy]
disallow_untyped_defs = false
ignore_missing_imports = true
mypy_path = "src"
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
